# socketpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: socketppConfig.cmake.in
examples/: CMakeLists.txt  tcp_echo_client.cpp  tcp_echo_server.cpp  udp_batch_recv.cpp  udp_dns_query.cpp  udp_echo_server.cpp
include/: socketpp.hpp
include/socketpp/: dgram.hpp  dgram_peer.hpp  fwd.hpp  stream.hpp  tcp_client.hpp  tcp_connection.hpp  tcp_server.hpp  udp_server.hpp  version.hpp
include/socketpp/event/: dispatcher.hpp  loop.hpp  timer.hpp
include/socketpp/net/: address.hpp  inet4.hpp  inet6.hpp
include/socketpp/platform/: capabilities.hpp  detect.hpp  error.hpp  types.hpp
include/socketpp/socket/: buf_profile.hpp  options.hpp  socket.hpp  tcp.hpp  tcp_connector.hpp  tcp_listener.hpp  udp.hpp  udp_peer.hpp
src/event/: epoll.cpp  iocp.cpp  kqueue.cpp  loop.cpp  waker.hpp
src/high/: connection_engine.hpp  dgram.cpp  dgram_peer.cpp  dgram_peer_impl.hpp  serial_queue.hpp  stream.cpp  stream_connection_impl.hpp  tcp_client.cpp  tcp_connection.cpp  tcp_connection_impl.hpp  tcp_server.cpp  thread_pool.cpp  thread_pool.hpp  udp_server.cpp
src/net/: address.cpp  inet4.cpp  inet6.cpp
src/platform/: detect_internal.hpp  error.cpp  spinlock.hpp  wsa_init.cpp  wsa_init.hpp
src/socket/: options.cpp  socket.cpp  tcp.cpp  tcp_accept_loop.cpp  tcp_connect_async.cpp  tcp_connector.cpp  tcp_listener.cpp  udp.cpp  udp_mux.hpp  udp_peer.cpp  udp_recv_async.cpp
tests/: CMakeLists.txt  blackbox_verify.cpp  concurrency_tests.cpp  error_path_tests.cpp  high_level_tests.cpp  ipv6_high_level_tests.cpp  tcp_throughput_bench.cpp  test_harness.hpp  tests.cpp  udp_throughput_bench.cpp
tests/fuzz/: CMakeLists.txt  fuzz_inet4_parse.cpp  fuzz_inet4_roundtrip.cpp  fuzz_inet6_parse.cpp  fuzz_inet6_roundtrip.cpp  fuzz_sock_address_roundtrip.cpp
